Fix containers spacing

--- a/ckanext/ponderful_theme/public/ponderful_theme.css
+++ b/ckanext/ponderful_theme/public/ponderful_theme.css
@@ -111,3 +111,14 @@ body {
 .site-footer a {
   color: rgba(255, 255, 255, 0.6);
 }
+
+
+.row > article {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.row > .primary {
+  padding-right: 0;
+  padding-left: 0;
+}
